updated readme markdown with button to coder

--- a/template-class-uci-heart.ipynb
+++ b/template-class-uci-heart.ipynb
@@ -22,9 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading postgres module without psycopg2 installed. Will crash at runtime if postgres functionality is used.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to d6tflow! For Q&A see https://github.com/d6t/d6tflow\n",
+      "Welcome to d6tpipe!\n"
+     ]
+    }
+   ],
    "source": [
     "# processing\n",
     "import d6tflow, luigi, d6tpipe\n",
@@ -65,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,28 +94,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pulling: 0.00MB\n"
+      "pulling: 0.53MB\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
+      "100%|██████████| 11/11 [00:01<00:00,  6.32it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "where files are stored: d:\\d6tpipe-files\\files\\default\\intro-stat-learning\n"
+      "############### README ###############\n",
+      "# An Introduction to Statistical Learning\n",
+      "\n",
+      "http://www-bcf.usc.edu/~gareth/ISL/data.html\n",
+      "\n",
+      "############### README ###############\n",
+      "############### LICENSE ###############\n",
+      "If you use any of these figures in a presentation or lecture, somewhere in your set of slides please add the paragraph: \"Some of the figures in this presentation are taken from \"An Introduction to Statistical Learning, with applications in R\"  (Springer, 2013) with permission from the authors: G. James, D. Witten,  T. Hastie and R. Tibshirani \" \n",
+      "\n",
+      "If you wish to use any of these figures in a publication, you must get permission from Springer, and each figure must be accompanied by a similar acknowledgement.\n",
+      "\n",
+      "############### LICENSE ###############\n",
+      "where files are stored: /home/coder/d6tpipe/files/default/intro-stat-learning\n"
      ]
     },
     {
